--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "author": "",
   "dependencies": {
+    "chess.js": "^0.10.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "pug": "^2.0.0-rc.4",
+    "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
